# coastguard

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  project.clj  shell.nix
doc/: intro.md
src/: endpoint.rs  fmt.rs  main.rs  mutator.rs  resources.rs  verifier.rs
src/coastguard/: core.clj  dns.clj  homoglyphs.clj  tlds.clj
src/mutator/: homoglyph.rs  levenshtein.rs  tlds.rs
src/verifier/: dns.rs
test/coastguard/: core_test.clj
