[package]
name = "coastguard"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1.88"
dns-lookup = "2.0.4"